# semseg_demo

./: .gitignore  matome_capvideo_nothread.py  matome_capvideo_nothread_small.py  prepare.sh  pyproject.toml
mmdet/core/visualization/: image.py  palette.py
mmdet/datasets/: __init__.py  ade_coco.py
