[tool.poetry]
name = "kdix-demo2023"
version = "0.1.0"
authors = ["ibilab"]
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
addict="2.4.0"
blis="0.7.10"
catalogue="2.0.9"
certifi="2023.7.22"
charset-normalizer="3.2.0"
click="8.1.6"
confection="0.1.0"
contourpy="1.1.0"
cycler="0.11.0"
cymem="2.0.7"
filelock="3.12.2"
fonttools="4.41.1"
fsspec="2023.6.0"
huggingface-hub="0.16.4"
idna="3.4"
importlib-metadata="6.8.0"
importlib-resources="6.0.0"
japanize-matplotlib="1.1.3"
Jinja2="3.1.2"
kiwisolver="1.4.4"
langcodes="3.3.0"
MarkupSafe="2.1.3"
matplotlib="3.7.2"
mmdet="2.25.3"
murmurhash="1.0.9"
numpy="1.24.2"
opencv-python="4.7.0.72"
packaging="23.1"
pathy="0.10.2"
Pillow="9.5.0"
platformdirs="3.10.0"
preshed="3.0.8"
pycocotools="2.0.6"
pydantic="1.10.12"
pyparsing="3.0.9"
python-dateutil="2.8.2"
PyYAML="6.0.1"
regex="2023.6.3"
requests="2.31.0"
scipy="1.10.1"
segment-anything="1.0"
six="1.16.0"
smart-open="6.3.0"
spacy="3.5.1"
spacy-legacy="3.0.12"
spacy-loggers="1.0.4"
srsly="2.4.7"
terminaltables="3.1.10"
thinc="8.1.10"
tokenizers="0.13.3"
tomli="2.0.1"
tqdm="4.65.0"
transformers="4.27.4"
typer="0.7.0"
typing_extensions="4.7.1"
urllib3="2.0.4"
wasabi="1.1.2"
yapf="0.40.1"
zipp="3.16.2"

torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.9.1%2Bcu111-cp38-cp38-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu111/torchvision-0.10.1%2Bcu111-cp38-cp38-linux_x86_64.whl" }
mmcv-full = { url = "https://download.openmmlab.com/mmcv/dist/cu111/torch1.9.0/mmcv_full-1.3.18-cp38-cp38-manylinux1_x86_64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

